Fix checkbox alignment

--- a/style/base.css
+++ b/style/base.css
@@ -153,12 +153,10 @@ textarea {
 	}
 
 input[type="checkbox"] {
-	float: left;
-	display: block;
 	opacity: 0.75;
-	margin-top: 0.15em;
-	margin-right: 0.5em;
 	transition: 150ms all;
+	position: relative;
+	vertical-align: middle;
 }
 	input[type="checkbox"]:checked {
 		opacity: 1;
